@@ -12,6 +12,9 @@ What's New in Python 2.6.5
 Core and Builtins
 -----------------
 
+- Issue #6108: unicode(exception) and str(exception) should return the same
+  message when only __str__ (and not __unicode__) is overridden in the subclass.
+
 - Issue #7491: Metaclass's __cmp__ method was ignored.
 
 - Add Py3k warnings for parameter names in parenthesis.
